fix: dark mode border

--- a/darkMode.css
+++ b/darkMode.css
@@ -35,12 +35,15 @@ html,
 }
 .block_cnt .cboxAnchor:not(.response) .plurk_cnt,
 #form_holder {
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0);
+  transition: border 0.2s;
 }
 #form_holder {
+  border: 1px solid rgba(255, 255, 255, 0.3);
   border-top: 0;
 }
 .block_cnt .cboxAnchor:not(.response).plurk_box .plurk_cnt {
+  border: 1px solid rgba(255, 255, 255, 0.3);
   border-bottom: 0;
 }
 /* 未讀噗邊框 */
